syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.schoolsservicegrpc.grpc";

service schoolService{
  rpc getOneById(id) returns (SchoolObject){}
  rpc getAll(Empty) returns (SchoolsList){}
}

message id{
  int32 id = 1;
}

message SchoolObject{
  int32 id = 1;
  string name = 2;
  string location = 3;
}

message Empty {

}

message SchoolsList {
  repeated SchoolObject school = 1;
}